<resources>
    <string name="app_name">Student_Event_Registration</string>
    <string name="student_logout">Logout</string>
    <string name="student_profile">Profile</string>
    <string name="att_events">Attended Events</string>
    <string name="events_happening">UPCOMING EVENTS</string>
    <string name="organizer">ORGANIZER</string>
    <string name="student">STUDENT</string>
    <string name="great">Great</string>
    <string name="fair">Fair</string>
    <string name="event_feedback">How was the Event?</string>
    <string name="improvement">Need Improvement</string>
    <string name="submit">SUBMIT</string>
    <string name="sys_name">EVENT REGISTRATION SYSTEM</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD :</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="userid">USER_ID :</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="provide">PROVIDE FEEDBACK</string>
</resources>
